--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+   <title>{% block title %}Welcome!{% endblock %}</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    {% block stylesheets %}
+       <link rel="stylesheet" src="{{asset('css/bootstrap.min.css')}}"> 
+    <link href="../../../web/css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+  <link href="../../../web/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+       <link href="../../../web/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="../../../web/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    {% endblock %}
+     </head>
+  
+  <body>
+
+    <nav class="navbar navbar-inverse">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">TodoList</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/todolist/web/app_dev.php/todo">Home</a></li>
+            <li><a href="/todolist/web/app_dev.php/todo/new">Add Todo</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                  {% block body %}{% endblock %}
+            </div>
+        </div>
+    </div>
+              {% block javascripts %}
+                  <script src="../../../web/js/bootstrap.js" type="text/javascript"></script>
+                  <script src="../../../web/js/bootstrap.min.js" type="text/javascript"></script>
+              {% endblock %}
+ </body>
 </html>
